[package]
authors = ["willemml <willem@leit.so>"]
description = "A client for wicrs_server."
edition = "2018"
license = "GPL-3.0"
name = "wicrs_client"
repository = "https://github.com/wicrs/client"
version = "0.1.0"

[dependencies]
crossterm = "0.22"
log = "0.4"
tokio = {version = "1.5", features = [
  "macros",
  "fs",
  "sync",
  "rt",
  "rt-multi-thread",
]}
chrono = { version = "0.4", features = ["serde"] }
tui = {git = "https://github.com/fdehau/tui-rs"}
uuid = {version = "0.8", features = ["v4", "serde"]}
wicrs_api = {git = "https://github.com/wicrs/api", features = ["wicrs-server-full"]}
